apps/media/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kuberentes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:latest
          ports:
            - containerPort: 9117
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
          volumeMounts:
            - mountPath: /data/torrent
              name: data
            - mountPath: /config
              name: config
      volumes:
        - name: data
          nfs:
            path: /data/torrent
            server: 192.168.0.14
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config
