apps/media/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  selector:
    app: jackett
  ports:
    - port: 9117
      targetPort: 9117
