apps/media/jackett/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  labels:
    name: jackett
spec:
  rules:
    - host: jackett.vkolobara.home
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jackett
                port:
                  number: 9117
